<resources>
    <string name="app_name">drones_isai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_datang">Selamat Datang !</string>
    <string name="silahkan_login">Silahkan Login ke akun anda menggunakan Email dan Password yang telah didaftarkan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Ingat akun saya</string>
    <string name="login">Login</string>
    <string name="unggah_foto_citra_nir">Unggah foto citra NIR</string>
    <string name="unggah_foto">Unggah Foto</string>
    <string name="selamat_datang_di">Selamat Datang di</string>
    <string name="sistem_berbasis_cerdas_yang_dapat_memprediksi_nilai_karbon_suatu_lahan_serta_mendukung_pengambilan_data_karbon_secara_otomatis_melalui_drone">Sistem berbasis cerdas yang dapat memprediksi nilai karbon suatu lahan serta mendukung pengambilan data karbon secara otomatis melalui drone.</string>
    <string name="automationsystem">#AutomationSystem</string>
    <string name="didukung_oleh">Didukung oleh</string>
    <string name="kekuatan_drone">Kekuatan Drone</string>
    <string name="untuk_melakukan_aerial_imaging_yang_akan_menjadi_dasar_prediksi_nilai_karbon_pada_suatu_lahan">Untuk melakukan aerial imaging yang akan menjadi dasar prediksi nilai karbon pada suatu lahan.</string>
    <string name="kolaborasi_software_amp_hardware"><![CDATA[Kolaborasi software & hardware]]></string>
    <string name="embeded_system_yang_dirancang_dengan_kemampuan_otomatisasi_pengambilan_data_melalui_drone">Embeded system yang dirancang dengan kemampuan otomatisasi pengambilan data melalui drone.</string>
    <string name="website_isai">Website ISAI</string>
    <string name="untuk_visualisasi_informasi_pemetaan_nilai_karbon_kalkulator_karbon_monitoring_tren_perubahan_dan_histori_nilai_karbon_yang_dapat_diakses_dengan_mudah">Untuk visualisasi informasi pemetaan nilai karbon, kalkulator karbon, monitoring tren perubahan dan histori nilai karbon yang dapat diakses dengan mudah</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="infomasi_lokasi">Infomasi Lokasi</string>
    <string name="kode_sample">Kode Sample</string>
    <string name="nama_lahan">Nama Lahan</string>
    <string name="komoditas">Komoditas</string>
    <string name="tanggal_sampling">Tanggal Sampling</string>
    <string name="karbon_tanah">Karbon Tanah</string>
    <string name="karbon_tanaman">Karbon Tanaman</string>
    <string name="tren_nilai_karbon">Tren Nilai Karbon</string>
    <string name="filter">Filter</string>
    <string name="defisit">Defisit</string>
    <string name="surplus">Surplus</string>
    <string name="karbon_lingkungan">Karbon Lingkungan</string>
    <string name="jumlah_karbon_gr">Jumlah Karbon(gr)</string>
    <string name="hari_setelah_tanam_hst">Hari Setelah Tanam (HST)</string>
    <string name="tahun">Tahun</string>
    <string name="data_karbon">Data Karbon</string>
    <string name="jenis_komoditas">Jenis Komoditas</string>
    <string name="nilai_agregat">Nilai Agregat</string>
    <string name="lokasi">Lokasi</string>
    <string name="terapkan_filter">Terapkan Filter</string>
    <string name="cetak">Cetak</string>
    <string name="tampilkan_semua_data">Tampilkan semua data</string>
    <string name="bersihkan_filer">bersihkan filer</string>
    <string name="text_tentang">Untuk melakukan aerial imaging yang akan menjadi dasar prediksi nilai karbon pada suatu lahan.</string>
    <string name="foto_drone">Foto Drone</string>
    <string name="kedaireka">kedaireka</string>
    <string name="beehive_drones">Beehive Drones</string>
    <string name="ukdw">Universitas Kristen Duta Wacana</string>
    <string name="fti">Fakultas Teknologi Informasi</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="call">call</string>
    <string name="maps">maps</string>
    <string name="menampilkan_data">Menampilkan data :</string>
    <string name="masukan_nama_file">Masukan Nama File:</string>
    <string name="nama_file">Nama File</string>
    <string name="tampilkan_lokasi_di_ar">Tampilkan Lokasi Di AR</string>
</resources>