<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tentang.Tentang2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/gambar_drone"
            android:contentDescription="@string/foto_drone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/bellotatext_bold"
            android:text="@string/kekuatan_drone"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bellotatext_regular"
            android:padding="18dp"
            android:text="@string/text_tentang"
            android:textAlignment="center"
            android:textColor="#101012"
            android:textSize="18sp" />
    </LinearLayout>


</FrameLayout>