<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tren_nilai_karbon"
            android:fontFamily="@font/roboto_regular"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/filter_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="left"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_filter_foreground"
            android:contentDescription="@string/filter" />
        <ImageView
            android:id="@+id/btn_export"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_download"
            android:contentDescription="@string/cetak" />


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:tabTextColor="@color/black"
        app:tabSelectedTextColor="@color/blue" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
