<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:layout_width="20dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:background="#c0c0c0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.65dp"
        android:layout_marginTop="5dp"
        android:background="#c0c0c0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/tahun"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_tahun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_outline"
            android:padding="18dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/lokasi"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_data_karbon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_outline"
            android:dropDownWidth="match_parent"
            android:dropDownHorizontalOffset="0dp"
            android:dropDownVerticalOffset="40dp"
            android:gravity="right"
            android:padding="18dp"
            android:popupBackground="@color/white"
            android:popupElevation="8dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/jenis_komoditas"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_jenis_komoditas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_outline"
            android:dropDownWidth="match_parent"
            android:dropDownHorizontalOffset="0dp"
            android:dropDownVerticalOffset="40dp"
            android:gravity="right"
            android:padding="18dp"
            android:popupBackground="@color/white"
            android:popupElevation="8dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <com.kusu.loadingbutton.LoadingButton
        android:id="@+id/filterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/terapkan_filter"
        android:textColor="@color/white"
        app:lb_buttonColor="@color/blue_theme"
        app:lb_loaderColor="@color/white"
        app:lb_shadowColor="@color/blue_light_2" />
</LinearLayout>
