<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/didukung_oleh"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/logo_ukdw_foreground" />

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/logo_fti_foreground" />

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/logo_kedaireka_foreground" />

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/logo_beehivedrones_foreground" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/selamat_datang_di"
                    android:textColor="@color/blue"
                    android:textSize="24sp" />

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/logo2_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:padding="20dp"
                    android:text="@string/sistem_berbasis_cerdas_yang_dapat_memprediksi_nilai_karbon_suatu_lahan_serta_mendukung_pengambilan_data_karbon_secara_otomatis_melalui_drone"
                    android:textAlignment="center"
                    android:textColor="#101012"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/logo_drone_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/automationsystem"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />


            </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="28dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/kekuatan_drone"
                            android:textColor="@color/blue"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/roboto_regular"
                            android:letterSpacing="0.01"
                            android:text="@string/untuk_melakukan_aerial_imaging_yang_akan_menjadi_dasar_prediksi_nilai_karbon_pada_suatu_lahan"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="220dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/kolaborasi_software_amp_hardware"
                            android:textColor="@color/blue"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/roboto_regular"
                            android:letterSpacing="0.01"
                            android:text="@string/embeded_system_yang_dirancang_dengan_kemampuan_otomatisasi_pengambilan_data_melalui_drone"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:layout_marginTop="420dp"
                    android:layout_marginRight="28dp"
                    android:layout_marginBottom="50dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/website_isai"
                            android:textColor="@color/blue"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/roboto_regular"
                            android:letterSpacing="0.01"
                            android:text="@string/untuk_visualisasi_informasi_pemetaan_nilai_karbon_kalkulator_karbon_monitoring_tren_perubahan_dan_histori_nilai_karbon_yang_dapat_diakses_dengan_mudah"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:layout_marginTop="80dp"
                    android:src="@mipmap/garis_about_foreground" />


            </FrameLayout>


        </LinearLayout>


    </ScrollView>

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottomNavigationView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:background="@color/blue"-->
<!--        app:itemIconTint="@color/white"-->
<!--        app:itemTextColor="@color/white"-->
<!--        app:menu="@menu/bottom_navigation_menu" />-->

</RelativeLayout>